# MediaMaster

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/core/: MediaConverter.h  MediaInfo.h  MediaScanner.h  mainwindow.h
src/core/: MediaConverter.cpp  MediaScanner.cpp  mainwindow.cpp  mainwindow.ui
